--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StreamNZ - Ultimate Gaming Destination</title>
+    <link rel="icon" href="https://oss.streamnz.com/streamnz/logo.png" />
 </head>
 <body>
     <div id="root"></div>
