--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StreamNZ - Ultimate Gaming Destination</title>
-    <link rel="icon" href="https://cdn.streamnz.com/logo.png" />
+    <link rel="icon" href="https://ai.streamnz.com/logo.png" />
 </head>
 <body>
     <div id="root"></div>
